Some smaller refactoring reading EXIF metadata